# crispy-rotary-phone

./: .dockerignore  .env.example  .gitignore  .~lock.ods.ods#  Dockerfile  README.md  clear_data.py  clear_data_api.py  dealer_migration.py  ods.ods  product_migration.py  provision_firebase_users.py  pyproject.toml  requirements.txt  salesman_migration.py  setup_droplet.sh  start.sh  test_db_connection.py  test_endpoints.sh  update_dealer_credit_limit.py  update_dealer_states.py  update_salesman_dealers.py  verify_dealer_states.py
.do/: app.yaml
src/: main.py  server.py
src/api/middleware/: admin_check.py  order_validation.py
src/api/models/: connection.py  dealers.py  directors.py  forecasts.py  orders.py  products.py  sales_managers.py  sales_men.py  user.py
src/api/routes/: database.py  forecasts.py  order.py  user.py
src/config/: settings.py
src/core/: database.py
