[project]
name = "nexgrow-server"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "pymongo==4.6.3",
    "motor==3.4.0",
    "pydantic==2.9.2",
    "pydantic[email]",
    "uvicorn==0.31.1",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.0",
    "firebase-admin==6.5.0",
]

